--- a/css/mystyel.css
+++ b/css/mystyel.css
@@ -74,3 +74,9 @@ body {
     height: 120px;
     width: 120px;
 }
+
+/* custom class for text visibility on question 2 */
+
+.dark-text{
+   background-color: white;
+}
